[project]
name = "tts-convert"
version = "0.1.0"
description = "Convert text to speech"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "num2words>=0.5.14",
    "numpy>=2.2.5",
    "pydub>=0.25.1",
    "transliterate>=1.10.2",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true
